# Google_ADK

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: agent_config.py  agent_tool.py  app_config.py  main.py  model.py  prompt.py  utils.py
frontend/: app.py
