[project]
name = "google-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "luuducquy0510",email = "luuducquy05102003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "google-adk (>=0.2.0,<0.3.0)",
    "litellm (>=1.66.3,<2.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "duckduckgo-search (>=8.0.1,<9.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "streamlit (>=1.44.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
